Changed the user.xml to check it out. Just go on Joomla to Users -> Manage -> Click on Your User -> Name is a time Field but without min/max/step

--- a/administrator/components/com_users/forms/user.xml
+++ b/administrator/components/com_users/forms/user.xml
@@ -3,10 +3,12 @@
 	<fieldset name="user_details">
 		<field
 			name="name"
-			type="text"
+			type="time"
 			label="COM_USERS_USER_FIELD_NAME_LABEL"
 			required="true"
 			size="30"
+			min="08:00"
+			max="15:00"
 		/>
 
 		<field
